Add phantom-cli binary with full command structure
- Created phantom-cli crate with clap-based argument parsing
- Implements --version (phantom 1.0.0) and --help
- Subcommands: init, add, list, show, get, remove, run,
  namespace, rotate, audit, health, canary, policy, mcp, import
- Subcommands print "Not yet implemented" for now
- This is the binary the install script downloads

Co-Authored-By: Nous <nous@riscent.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [workspace]
 resolver = "2"
 members = [
+    "crates/phantom-cli",
     "crates/vault-core",
     "crates/vault-mcp",
     "crates/vault-tauri",
