Implement full Phantom Vault CLI and biometric authentication
Core CLI implementation:
- phantom init: Create vault with optional --biometric flag
- phantom add: Add secrets from prompt or --from-env
- phantom list: Show all secret names
- phantom show: Display masked secret values
- phantom get: Retrieve secret (TTY only for security)
- phantom remove: Delete secrets with confirmation
- phantom run: Execute commands with injected secrets
- phantom rotate: Update secret values
- phantom health: Vault health check
- phantom import: Import from .env files
- phantom mcp install/uninstall/status: MCP integration

Biometric authentication (macOS):
- Touch ID support via Security framework + Keychain
- phantom biometric status/enable/disable commands
- Store master key protected by biometric access
- Fallback to password-only on unsupported platforms

Bug fixes:
- Fix 4 failing filter tests (stripe, slack, sendgrid patterns)
- Fix 13 borrow checker errors in tauri-app
- Add placeholder frontend and icon for Tauri build

Co-Authored-By: Nous <nous@riscent.com>

--- a/crates/phantom-cli/Cargo.toml
+++ b/crates/phantom-cli/Cargo.toml
@@ -11,4 +11,29 @@ name = "phantom"
 path = "src/main.rs"
 
 [dependencies]
+# CLI framework
 clap = { version = "4.5", features = ["derive"] }
+
+# Vault core functionality
+vault-core = { path = "../vault-core" }
+
+# Async runtime
+tokio = { workspace = true }
+
+# Password input
+rpassword = "7.3"
+
+# Directories
+dirs = { workspace = true }
+
+# JSON handling for MCP config
+serde_json = { workspace = true }
+
+# Timestamps
+chrono = { workspace = true }
+
+# TTY detection
+atty = "0.2"
+
+[target.'cfg(target_os = "macos")'.dependencies]
+security-framework = "2.11"
