--- a/native/Cargo.toml
+++ b/native/Cargo.toml
@@ -18,5 +18,9 @@ serde_json = { workspace = true }
 # flutter_rust_bridge - commented out until flutter app is set up
 # flutter_rust_bridge = "2"
 
+[target.'cfg(target_os = "macos")'.dependencies]
+security-framework = "2.11"
+security-framework-sys = "2.11"
+
 [build-dependencies]
 # flutter_rust_bridge_codegen = "2"
